Fixed alignment and changed support to copyright

--- a/styles2.css
+++ b/styles2.css
@@ -301,7 +301,7 @@ aside{
     #footer {
       position: fixed;
       bottom: 0;
-      left: 0;
+      left: 4.2%;
       width: 100%;
       padding: 56px 0;
       text-align: center;
